[gd_scene load_steps=13 format=2]

[ext_resource path="res://new_theme.tres" type="Theme" id=1]
[ext_resource path="res://Game_UI.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Interactables/Ring_test2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Interactables/Ring_test.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Characters/speed_gauge.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Characters/speed_gauge_back.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 9, 9 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 9, 0, 9, 9 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 18, 0, 9, 9 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 7, 7 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 7, 0, 7, 7 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 152.0
margin_top = 4.0
margin_right = 508.0
margin_bottom = 104.0
color = Color( 0.360784, 0, 1, 1 )

[node name="Back Button" type="Button" parent="."]
margin_left = 8.0
margin_top = 12.0
margin_right = 144.0
margin_bottom = 52.0
theme = ExtResource( 1 )
text = "Back"

[node name="TimerText" type="RichTextLabel" parent="."]
margin_left = 168.0
margin_top = 4.0
margin_right = 320.0
margin_bottom = 72.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 1 )
text = "Time:
10.00"

[node name="RingText" type="RichTextLabel" parent="."]
margin_left = 411.0
margin_top = 12.0
margin_right = 563.0
margin_bottom = 38.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 1 )
text = "100"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 384, 36 )
scale = Vector2( 6, 6 )
frames = SubResource( 4 )
animation = "New Anim"
frame = 2
playing = true

[node name="SpeedGaugeBack" type="Sprite" parent="."]
position = Vector2( 608, 44 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )

[node name="SpeedGauge" type="Sprite" parent="."]
position = Vector2( 608, 104 )
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )
offset = Vector2( 0, -8 )

[connection signal="button_down" from="Back Button" to="." method="_on_Back_Button_button_down"]
